--- a/BigProject/Main.storyboard
+++ b/BigProject/Main.storyboard
@@ -29,7 +29,7 @@
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" title="Go" id="6z5-vi-bW8">
                                             <connections>
-                                                <segue destination="iyZ-Md-vQG" kind="show" id="s6D-7b-aqh"/>
+                                                <segue destination="gMl-Oa-Bou" kind="show" id="Ysa-sZ-pUi"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -167,16 +167,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Set" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e3H-PJ-Vfn">
-                                <rect key="frame" x="347" y="97" width="26" height="21"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="f6N-CP-x0T">
                                 <rect key="frame" x="25" y="124" width="536" height="406"/>
                                 <animations/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="47N-ln-FLK">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -201,6 +195,16 @@
                                     <outlet property="delegate" destination="u8t-gQ-Aqq" id="eoE-pP-Kvj"/>
                                 </connections>
                             </collectionView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JEY-cR-cJf">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <animations/>
+                                <items>
+                                    <navigationItem title="Cards" id="7qH-X8-fti">
+                                        <barButtonItem key="leftBarButtonItem" title="Sign Out" id="kGS-Jh-azS"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" systemItem="add" id="8oe-G4-BVX"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -211,7 +215,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cmk-9n-nXf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1302" y="1001"/>
+            <point key="canvasLocation" x="646" y="1050"/>
         </scene>
         <!--Set Table-->
         <scene sceneID="cC9-br-IXw">
@@ -322,7 +326,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zy0-5a-DWw" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="561" y="191"/>
+            <point key="canvasLocation" x="1061" y="-583"/>
         </scene>
         <!--Card Table-->
         <scene sceneID="G46-ts-62k">
@@ -408,7 +412,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QKH-U0-cde" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2566" y="191"/>
+            <point key="canvasLocation" x="1876" y="-597"/>
         </scene>
         <!--Sets View Controller-->
         <scene sceneID="OYq-9h-QNr">
@@ -425,6 +429,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Eaq-QG-KJK">
                                 <rect key="frame" x="20" y="129" width="558" height="364"/>
                                 <animations/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="607-oq-6qQ">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -492,7 +497,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PYr-47-0TO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="541" y="994"/>
+            <point key="canvasLocation" x="-170" y="1050"/>
         </scene>
         <!--Front View Controller-->
         <scene sceneID="9tA-US-ytH">
@@ -660,9 +665,9 @@
         <image name="card" width="518" height="318"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="s6D-7b-aqh"/>
-        <segue reference="meP-hC-F5U"/>
+        <segue reference="yAF-uE-6RO"/>
+        <segue reference="AWg-Le-xxg"/>
         <segue reference="u19-cP-Oav"/>
-        <segue reference="Tdh-dJ-M08"/>
+        <segue reference="dsx-EF-USm"/>
     </inferredMetricsTieBreakers>
 </document>
